--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "express": "^4.19.2",
     "nodemon": "^3.1.0",
     "pg": "^8.11.5",
-    "sequelize": "^6.37.3"
+    "sequelize": "^6.37.3",
+    "winston": "^3.13.0"
   }
 }
